--- a/localisation/TGE_marcin_l_english.yml
+++ b/localisation/TGE_marcin_l_english.yml
@@ -16,7 +16,7 @@
  opium: "Opium"
  opiumDESC: "Opium is the dried latex obtained from the opium poppy, which is processed chemically to produce heroin and other synthetic opioids for medicinal use."
  rice: "Rice"
- riceDESC: "Rice is the seed of the grass species. As a cereal grain, it is the most widely consumed staple food for a large part of the world's human population, especially in Asia."
+ riceDESC: "Rice is the seed of the grass species. As a cereal grain, it is the most widely consumed staple food for a large part of the world's human population, especially in Haless."
  rum: "Rum"
  rumDESC: "Rum is a distilled alcoholic drink made from sugarcane byproducts, such as molasses, or directly from sugarcane juice, by a process of fermentation and distillation. The distillate, a clear liquid, is then usually aged in oak barrels."
  horses: "Horses"
@@ -54,25 +54,25 @@
  nutmeg: "Nutmeg"
  nutmegDESC: "Nutmeg is the spice made by grinding the seed of the fragrant nutmeg tree into powder. The spice has a distinctive pungent fragrance and a warm slightly sweet taste; it is used to flavor many kinds of baked goods."
  maize: "Maize"
- maizeDESC: "Maize, often called corn, was a staple crop of the Americas; primarily in Central America, where growth conditions were ideal but also spreading to the rest of the Americas. It served the same role for Americans as most European cereals; a staple crop for humans and animal."
+ maizeDESC: "Maize, often called corn, was a staple crop of the REDACTED; primarily in REDACTED, where growth conditions were ideal but also spreading to the rest of the REDACTED. It served the same role for REDACTED as most REDACTED cereals; a staple crop for humans and animals."
  pearls: "Pearls"
- pearlsDESC: "Fine quality natural pearls are very rare jewels. Their values are determined similarly to those of other precious gems, according to size, shape, color, quality of surface, orient and luster.Single natural pearls are often sold as collectors' items, or set as centerpieces in unique jewelry."
+ pearlsDESC: "Fine quality natural pearls are very rare jewels. Their values are determined similarly to those of other precious gems, according to size, shape, color, quality of surface, orient and luster. Single natural pearls are often sold as collectors' items, or set as centerpieces in unique jewelry."
  metalworking: "Metalworking"
  metalworkingDESC: "Metalworking is the process of working with metals to create individual parts, assemblies, or large-scale structures."
  silver: "Silver"
  silverDESC: "Silver has been mined since ancient times, long valued as a precious metal, used to make ornaments, jewellery, high-value tableware and utensils."
  exotic_animals: "Exotic Animals"
- exotic_animalsDESC: "Exotic Animals include a wide variety of animals that are rare kept as a pet for a form of prestige for the rich people."
+ exotic_animalsDESC: "Exotic Animals include a wide variety of animals that are rare kept as a pet for a form of prestige for the wealthy."
  vanilla: "Vanilla"
- vanillaDESC: "Vanilla is a flavouring derived from vanilla orchids, native to South and Central America, primarily Mexico. Vanilla became popular in Europe as an additive to chocolate"
+ vanillaDESC: "Vanilla is a flavouring derived from vanilla orchids, native to REDACTED and REDACTED, primarily REDACTED. Vanilla became popular in Cannor as an additive to chocolate"
  munitions: "Munitions"
  munitionsDESC: "Munitions represents military supplies used in war, especially weapons and ammunition."
  woodworking: "Woodworking"
- woodworkingDESC: "Woodworking is the activity of making items from wood, and includes cabinet making and furniture"
+ woodworkingDESC: "Woodworking is the activity of making items from wood, and includes cabinet making and furniture."
  ebony: "Ebony"
  ebonyDESC: "Ebony is a dense black/brown hardwood, ideal for carving. The ebony wood was mostly used to make luxury cabinets with beautiful carved art on them."
  tar: "Tar"
- tarDESC: "Tar is a viscuous substance that can be obtained from various organic materials; primarily from pine trees, though tar-like products can be derived from various organic matter, like peat. Tar was a central part of North European economie, widely sought after as a preservative for wooden ships, protecting them against rot."
+ tarDESC: "Tar is a viscuous substance that can be obtained from various organic materials; primarily from pine trees, though tar-like products can be derived from various organic matter, like peat. Tar was a central part of REDACTED economies, widely sought after as a preservative for wooden ships, protecting them against rot."
  sulfur: "Sulfur"
  sulfurDESC: "Sulfur, known to the ancient world as Brimstone, has long been associated with volcanic activity, which explains why ancient christians thought it might be of the devil. Sulfur was important in the production of gunpowder, being the ingredient most sought after."
  leather: "Leather"
@@ -80,29 +80,27 @@
  jewellery: "Jewellery"
  jewelleryDESC: "jewellery consists of decorative items worn for personal adornment, such as brooches, rings, necklaces, earrings, pendants, bracelets, and cufflinks. Jewellery may be attached to the body or the clothes."
  maple_syrup: "Maple Syrup"
- maple_syrupDESC: "Maple syrup was first made and used by the indigenous peoples of North America, and the practice was adopted by European settlers, who gradually refined production methods."
+ maple_syrupDESC: "Maple syrup was first made and used by the REDACTED peoples of REDACTED, and the practice was adopted by REDACTED settlers, who gradually refined production methods."
  potato: "Potatoes"
- potatoDESC: "Potatoes were introduced to Europe from the Americas in the second half of the 16th century by the Spanish and then becoming staple food in many parts of the world."
+ potatoDESC: "REDACTED"
  steam_engine: "Steam Engine"
  steam_engineDESC: "Steam Engine is a heat engine that performs mechanical work using steam as its working fluid. The steam engine uses the force produced by steam pressure to push a piston back and forth inside a cylinder."
  zinc: "Zinc"
- zincDESC: "Zinc is a lustrous metal that along with copper is used to make brass, commonly used to make figures, sculptures and tableware. Zinc was first isolated from its ores in India, centuries before the Europeans or Chinese managed the same, and most pure zinc in this period came from India."
+ zincDESC: "Zinc is a lustrous metal that along with copper is used to make brass, commonly used to make figures, sculptures and tableware. Zinc was first isolated from its ores in REDACTED, centuries before the REDACTED or REDACTED managed the same, and most pure zinc in this period came from REDACTED."
  optics: "Optics"
- opticsDESC: "Optics represent using glass and turning it into lenses that were used in correction of vision and many other inventions like compound optical microscope around 1595, and the refracting telescope in 1608, both of which appeared in the spectacle making centres in the Netherlands"
- brass: "Brass"
- brassDESC: "Brass has long been a popular material for decoration for its bright gold-like appearance, e.g. for drawer pulls and doorknobs. It has also been widely used for all sorts of utensils due to many properties, such as low melting point and workability."
+ opticsDESC: "Optics represent using glass and turning it into lenses that were used in correction of vision and many other inventions like compound optical microscope around REDACTED, and the refracting telescope in REDACTED, both of which appeared in the spectacle making centres in the REDACTED."
  cannon: "Cannons"
- cannonDESC: "A large, heavy piece of artillery, typically mounted on wheels, formerly used in warfare."
+ cannonDESC: "A large, heavy piece of artillery, typically mounted on wheels, used in warfare."
  tomato: "Tomatoes"
- tomatoDESC: "The wild ancestor of the tomato is native to western South America. These wild versions were the size of peas. The Spanish first introduced tomatoes to Europe, where they became used in Spanish and Italian food. In France and northern Europe, the tomato was initially grown as an ornamental plant."
+ tomatoDESC: "REDACTED"
  champagne: "Champagne"
- champagneDESC: "Special kind of sparkling wine is mainly produced by strict rules laid down by monastery in the Champagne province in France."
+ champagneDESC: "Special kind of sparkling wine is mainly produced by strict rules laid down by monastery in the REDACTED province in REDACTED."
  llama: "Llama"
- llamaDESC: "Llama and their smaller cousin Alpaca were domesticated and used by humans as labor animals and their hairs were a prized export product for use in textiles."
+ llamaDESC: "Llama and their smaller cousin Alpaca were domesticated and used by elves as labor animals and their hairs were a prized export product for use in textiles."
  indigo: "Indigo Dye"
  indigoDESC: "Historically, indigo was a natural dye extracted from the leaves of certain plants, and this process was important economically because blue dyes were once rare."
  sea_turtle: "Sea Turtles"
- sea_turtleDESC: "Sea Turtles were mainly hunted by locals. The meat was a delicacy in China and the could sell it to the merchants. Other product were also used in traditional medicine and cosmetics."
+ sea_turtleDESC: "Sea Turtles were mainly hunted by locals. The meat was a delicacy in REDACTED and they could sell it to the merchants. Other product were also used in traditional medicine and cosmetics."
  uniforms: "Uniforms"
  uniformsDESC: "Increasingly replacement of enlistment army with permanent national armies. has created national demand for uniforms. local cloth industries started production to meet the demand."
  marble_sculpture: "Marble Sculptures"
