--- a/localisation/DST_Roads_events_l_english.yml
+++ b/localisation/DST_Roads_events_l_english.yml
@@ -4,6 +4,8 @@
  building_gravel_road:0 "Gravel Road"
  building_gravel_road_desc:0 "Gravel is a much better foundation for roads than simple pressured dirt."
  building_royal_road:0 "Royal Road"
- building_royal_road_desc:0 "In the 17th century the French invented a new process to build roads. This was the so called 'Royal Roads'."
+ building_royal_road_desc:0 "In the REDACTED century the REDACTED invented a new process to build roads. This was the so called 'Royal Roads'."
  building_macadam_road:0 "Macadam Road"
- building_macadam_road_desc:0 "Engineer John McAdam rolled the crushed stones and covered it with cobblestone thus he created the most efficient roads before the advent of asphalt."
+ building_macadam_road_desc:0 "Engineer REDACTED rolled the crushed stones and covered it with cobblestone thus he created the most efficient roads before the advent of asphalt."
+ building_railroad: "Railroads"
+ building_railroad_desc: "REDACTED"
