--- a/localisation/TGE_marcin_l_english.yml
+++ b/localisation/TGE_marcin_l_english.yml
@@ -89,8 +89,10 @@
  zincDESC: "Zinc is a lustrous metal that along with copper is used to make brass, commonly used to make figures, sculptures and tableware. Zinc was first isolated from its ores in REDACTED, centuries before the REDACTED or REDACTED managed the same, and most pure zinc in this period came from REDACTED."
  optics: "Optics"
  opticsDESC: "Optics represent using glass and turning it into lenses that were used in correction of vision and many other inventions like compound optical microscope around REDACTED, and the refracting telescope in REDACTED, both of which appeared in the spectacle making centres in the REDACTED."
+ fur_clothing: "Fur Clothing"
+ fur_clothingDESC: "Fur is generally thought to have been among the first materials used for clothing and bodily decoration. Fur is worn in most mild and cool climates around the world due to its warmth and durability."
  cannon: "Cannons"
- cannonDESC: "A large, heavy piece of artillery, typically mounted on wheels, used in warfare."
+ cannonDESC: "A large, heavy piece of artillery, typically mounted on wheels, formerly used in warfare."
  tomato: "Tomatoes"
  tomatoDESC: "REDACTED"
  champagne: "Sparkling Wine"
