--- a/localisation/DST_Roads_events_l_english.yml
+++ b/localisation/DST_Roads_events_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
- building_early_road:0 "Early Road"
- building_early_road_desc:0 "Over time, people found the best routes which formed dirt roads. It would best if we took care of them and put some signs up."
- building_gravel_road:0 "Gravel Road"
- building_gravel_road_desc:0 "Gravel is a much better foundation for roads than simple pressured dirt."
- building_royal_road:0 "Royal Road"
- building_royal_road_desc:0 "In the REDACTED century the REDACTED invented a new process to build roads. This was the so called 'Royal Roads'."
- building_macadam_road:0 "Macadam Road"
- building_macadam_road_desc:0 "Engineer REDACTED rolled the crushed stones and covered it with cobblestone thus he created the most efficient roads before the advent of asphalt."
+ building_early_road: "Dirt Road"
+ building_early_road_desc: "§gAs time passed, natural pathways evolved into dirt roads. It is essential to maintain and install signage to ensure their proper care and use.§!\n\n"
+ building_gravel_road: "Gravel Road"
+ building_gravel_road_desc: "§gGravel serves as a superior foundation for roads compared to basic compacted dirt.§!\n\n"
+ building_royal_road: "Cobblestone Road"
+ building_royal_road_desc: "§gCobblestone stands as an enhanced foundation for roads, surpassing gravel in terms of durability and aesthetic appeal.§!\n\n"
+ building_macadam_road: "Dwarven Road"
+ building_macadam_road_desc: "§gDwarven roads mark a significant evolutionary leap beyond cobblestone, embodying the advancements in road construction pioneered by various Dwarven holds. With innovative dwarven technique involved layering crushed stones systematically, providing not only superior durability but also a remarkably smoother and more modern road surface.§!\n\n"
  building_railroad: "Railroads"
- building_railroad_desc: "REDACTED"
+ building_railroad_desc: "§gThe introduction of the railroad, served as a transformative upgrade to traditional macadam roads, revolutionizing land connectivity and enabling faster and more efficient movement of goods and people.§!\n\n"
