--- a/localisation/DST_random_l_english.yml
+++ b/localisation/DST_random_l_english.yml
@@ -3,3 +3,25 @@
  doge_temp_fix.tooltip: "In case NO OTHER options appears due to a tradegood that is not applicable to specialized holds for whatever reason, this option is to act as a way to get out of the event. In such a case please message ComradDoge which trade good it is."
 
  has_metal_goods_tt: "Has either §YTin§!, §YIron§!, §YLead§!, §YZinc§!, §YCopper§!"
+
+ building_province_selection_decision_title: "Building Province Limiter"
+ building_province_selection_decision_desc: "Forcelimit and Manufactories scale of certain amount of development. To improve quality of life, using this you can limit the provinces that are shown in the macrobuilder."
+ province_selection_flag_clearer_tt: "No Selection will be made and will clear any existing selections."
+
+ dse_basic_events.0.t: "Building Province Limiter"
+ dse_basic_events.0.d: "Selecting one of the limiters will result in only showing your selected minimum development when building navy or army forcelimit buildings."
+ dse_basic_events.0.o1: "Manufactories"
+ dse_basic_events.0.o2: "Army/Navy Forcelimit"
+ dse_basic_events.0.none: "Exit"
+ dse_basic_events.1.t: "Manufactory Production Selection"
+ dse_basic_events.1.d: "Selecting one of the limiters will result in only showing your selected minimum production when building manufactories."
+ dse_basic_events.1.o1: "Minimum §Y5§! Production"
+ dse_basic_events.1.o2: "Minimum §Y10§! Production"
+ dse_basic_events.1.o3: "Minimum §Y15§! Production"
+ dse_basic_events.1.none: "Clear"
+ dse_basic_events.2.t: "Forcelimit Production Selection"
+ dse_basic_events.2.d: "Selecting one of the limiters will result in only showing your selected minimum development when building navy or army forcelimit buildings."
+ dse_basic_events.2.o1: "Minimum §Y10§! Development"
+ dse_basic_events.2.o2: "Minimum §Y20§! Development"
+ dse_basic_events.2.o3: "Minimum §Y30§! Development"
+ dse_basic_events.2.none: "Clear"
